fix: Adjust image cropping to show top (heads)

--- a/src/app/pages/about/about.scss
+++ b/src/app/pages/about/about.scss
@@ -28,6 +28,7 @@
         width: 300px;
         height: 300px;
         object-fit: cover;
+        object-position: top;
         border-radius: 20px;
         box-shadow: 20px 20px 0 var(--secondary-color);
     }
